# servidor-simple-impresiones

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt  requirements.txt
enc_temp_folder/1247ea1e76bbcdaaabb163fcaad3/: main.cpp
src/: CMakeLists.txt  Service.cpp  Service.h  check_printer.cpp  check_printer.h  logger.h  main.cpp  main.h  pch.h
